--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -1,6 +1,7 @@
 {
   "ArgumentError": {
     "default": "The passed value is invalid.",
+
     "required": "The argument is required.",
     "string": "The argument must be a string.",
     "optString": "The argument must be a string or null.",
@@ -17,7 +18,43 @@
     "manFunction": "The argument must be a function.",
     "optType": "The argument must be a {0} object or null.",
     "manType": "The argument must be a {0} object.",
-    "enumType": "The {0} is not an enumeration type."
+    "enumType": "The {0} is not an enumeration type.",
+
+    "c_required": "The {1} argument of {0} constructor is required.",
+    "c_string": "The {1} argument of {0} constructor must be a string.",
+    "c_optString": "The {1} argument of {0} constructor must be a string or null.",
+    "c_manString": "The {1} argument of {0} constructor must be a non-empty string.",
+    "c_optNumber": "The {1} argument of {0} constructor must be a number value or null.",
+    "c_manNumber": "The {1} argument of {0} constructor must be a number value.",
+    "c_optInteger": "The {1} argument of {0} constructor must be an integer value or null.",
+    "c_manInteger": "The {1} argument of {0} constructor must be an integer value.",
+    "c_optBoolean": "The {1} argument of {0} constructor must be a Boolean value or null.",
+    "c_manBoolean": "The {1} argument of {0} constructor must be a Boolean value.",
+    "c_optObject": "The {1} argument of {0} constructor must be an object or null.",
+    "c_manObject": "The {1} argument of {0} constructor must be an object.",
+    "c_optFunction": "The {1} argument of {0} constructor must be a function or null.",
+    "c_manFunction": "The {1} argument of {0} constructor must be a function.",
+    "c_optType": "The {1} argument of {0} constructor must be a {2} object or null.",
+    "c_manType": "The {1} argument of {0} constructor must be a {2} object.",
+    "c_enumType": "The {1} argument of {0} constructor is not a {2} item.",
+
+    "m_required": "The {2} argument of {0}.{1} method is required.",
+    "m_string": "The {2} argument of {0}.{1} method must be a string.",
+    "m_optString": "The {2} argument of {0}.{1} method must be a string or null.",
+    "m_manString": "The {2} argument of {0}.{1} method must be a non-empty string.",
+    "m_optNumber": "The {2} argument of {0}.{1} method must be a number value or null.",
+    "m_manNumber": "The {2} argument of {0}.{1} method must be a number value.",
+    "m_optInteger": "The {2} argument of {0}.{1} method must be an integer value or null.",
+    "m_manInteger": "The {2} argument of {0}.{1} method must be an integer value.",
+    "m_optBoolean": "The {2} argument of {0}.{1} method must be a Boolean value or null.",
+    "m_manBoolean": "The {2} argument of {0}.{1} method must be a Boolean value.",
+    "m_optObject": "The {2} argument of {0}.{1} method must be an object or null.",
+    "m_manObject": "The {2} argument of {0}.{1} method must be an object.",
+    "m_optFunction": "The {2} argument of {0}.{1} method must be a function or null.",
+    "m_manFunction": "The {2} argument of {0}.{1} method must be a function.",
+    "m_optType": "The {2} argument of {0}.{1} method must be a {3} object or null.",
+    "m_manType": "The {2} argument of {0}.{1} method must be a {3} object.",
+    "m_enumType": "The {2} argument of {0}.{1} method is not a {3} item."
   },
   "DataTypeError": {
     "default": "The data type of the passed value is invalid.",
