--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -2,7 +2,10 @@
   "ArgumentError": {
     "default": "The passed value is invalid.",
     "rule": "A Rule constructor can accept three kind of argument: a string as the message, an integer as the priority and a Boolean as the stopsProcessing argument.",
+    "propManCtor": "All arguments of PropertyManager constructor but the first must be a PropertyInfo object.",
+    "propManItem": "The PropertyManager has no item named {0}.",
 
+    "defined": "The argument must be supplied.",
     "required": "The argument is required.",
     "string": "The argument must be a string.",
     "optString": "The argument must be a string or null.",
@@ -25,6 +28,7 @@
     "optArrayPrim": "The argument must be an array of {0} values, or a single {0} values or null.",
     "manArrayPrim": "The argument must be an array of {0} values or a single {0} values.",
 
+    "c_defined": "The {1} argument of {0} constructor must be supplied.",
     "c_required": "The {1} argument of {0} constructor is required.",
     "c_string": "The {1} argument of {0} constructor must be a string.",
     "c_optString": "The {1} argument of {0} constructor must be a string or null.",
@@ -47,6 +51,7 @@
     "c_optArrayPrim": "The {1} argument of {0} constructor must be an array of {2} values, or a single {2} values or null.",
     "c_manArrayPrim": "The {1} argument of {0} constructor must be an array of {2} values or a single {2} values.",
 
+    "m_defined": "The {2} argument of {0}.{1} method must be supplied.",
     "m_required": "The {2} argument of {0}.{1} method is required.",
     "m_string": "The {2} argument of {0}.{1} method must be a string.",
     "m_optString": "The {2} argument of {0}.{1} method must be a string or null.",
@@ -129,7 +134,10 @@
     "writeCollection": "Cannot write properties of {0}.{1} collection.",
     "noProperty": "{0} model has no property named {1}.",
     "readOnly": "{0}.{1} property is read-only.",
-    "transition": "Illegal state transition: {0} => {1}"
+    "transition": "Illegal state transition: {0} => {1}",
+    "propertyArg0": "The {1} property of {0} expects a function without arguments.",
+    "propertyArg1": "The {1} property of {0} expects a function with 1 argument.",
+    "propertyArgN": "The {1} property of {0} expects a function with {2} arguments."
   },
   "default": "This is a test message."
 }
