--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -75,6 +75,8 @@
     "m_optArrayPrim": "The {2} argument of {0}.{1} method must be an array of {3} values, or a single {3} values or null.",
     "m_manArrayPrim": "The {2} argument of {0}.{1} method must be an array of {3} values or a single {3} values.",
 
+    "c_itemType": "The itemType argument of {0} must be {1} type.",
+    "c_parent": "The parent argument of {0} constructor must be {1} type.",
     "m_notInit": "The {2} argument of {0}.{1} method is not initialized.",
     "m_null": "The {2} argument of {0}.{1} method must be null.",
     "p_enumMember": "The value of {0}.{1} property must be a {2} item."
@@ -85,7 +87,8 @@
     "file": "The value of {0} property of business objects' configuration is not a valid file path: {1}",
     "directory": "The value of {0} property of business objects' configuration is not a valid directory path: {1}",
     "function": "The file defined by the {0} property of business objects' configuration must return a function: {1}",
-    "enumMember": "The value of {0} property of business objects' configuration must be a {1} item."
+    "enumMember": "The value of {0} property of business objects' configuration must be a {1} item.",
+    "userInfo": "The function defined by the userReader property of business objects' configuration must return a UserInfo object."
   },
   "I18nError": {
     "default": "An error occurred in the business objects' localization.",
