--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -87,6 +87,7 @@
     "file": "The value of {0} property of business objects' configuration is not a valid file path: {1}",
     "directory": "The value of {0} property of business objects' configuration is not a valid directory path: {1}",
     "function": "The file defined by the {0} property of business objects' configuration must return a function: {1}",
+    "enumType": "{0} is not an enumeration type.",
     "enumMember": "The value of {0} property of business objects' configuration must be a {1} item.",
     "userReader": "The function defined by the userReader property of business objects' configuration must return a UserInfo object.",
     "localeReader": "The function defined by the localeReader property of business objects' configuration must return a string value.",
