--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -172,7 +172,8 @@
     "propertyArgN": "The {1} property of {0} expects a function with {2} arguments.",
     "invalidItem": "The model type of {0} is {1}, but the item type of {2} must be {3}.",
     "invalidChild": "The model type of {1} property of {0} is {2}, but it should be {3}.",
-    "frozen": "Cannot change the definition of {0} after creation."
+    "frozen": "Cannot change the definition of {0} after creation.",
+    "invalidTree": "Argument itemType is {0}, but the type of the parent is {1}."
   },
   "default": "This is a test message."
 }
