Adding argument check tests.

--- a/source/locales/default.json
+++ b/source/locales/default.json
@@ -83,6 +83,61 @@
     "p_enumMember": "The value of {0}.{1} property must be a {2} item.",
     "p_optString": "The value of {0}.{1} property must be a string or null."
   },
+  "ConstructorError": {
+    "default": "The value passed to the constructor is invalid.",
+    "defined": "The {1} argument of {0} constructor must be supplied.",
+    "required": "The {1} argument of {0} constructor is required.",
+    "string": "The {1} argument of {0} constructor must be a string.",
+    "optString": "The {1} argument of {0} constructor must be a string or null.",
+    "manString": "The {1} argument of {0} constructor must be a non-empty string.",
+    "optNumber": "The {1} argument of {0} constructor must be a number value or null.",
+    "manNumber": "The {1} argument of {0} constructor must be a number value.",
+    "optInteger": "The {1} argument of {0} constructor must be an integer value or null.",
+    "manInteger": "The {1} argument of {0} constructor must be an integer value.",
+    "optBoolean": "The {1} argument of {0} constructor must be a Boolean value or null.",
+    "manBoolean": "The {1} argument of {0} constructor must be a Boolean value.",
+    "optObject": "The {1} argument of {0} constructor must be an object or null.",
+    "manObject": "The {1} argument of {0} constructor must be an object.",
+    "optFunction": "The {1} argument of {0} constructor must be a function or null.",
+    "manFunction": "The {1} argument of {0} constructor must be a function.",
+    "optType": "The {1} argument of {0} constructor must be a {2} object or null.",
+    "manType": "The {1} argument of {0} constructor must be a {2} object.",
+    "modelType": "The {1} argument of {0} constructor must be {2} type.",
+    "enumMember": "The {1} argument of {0} constructor must be a {2} item.",
+    "optArray": "The {1} argument of {0} constructor must be an array of {2} objects, or a single {2} object or null.",
+    "manArray": "The {1} argument of {0} constructor must be an array of {2} objects or a single {2} object.",
+    "optArrayPrim": "The {1} argument of {0} constructor must be an array of {2} values, or a single {2} values or null.",
+    "manArrayPrim": "The {1} argument of {0} constructor must be an array of {2} values or a single {2} values."
+  },
+  "MethodError": {
+    "default": "The value passed to the method is invalid.",
+    "defined": "The {2} argument of {0}.{1} method must be supplied.",
+    "required": "The {2} argument of {0}.{1} method is required.",
+    "string": "The {2} argument of {0}.{1} method must be a string.",
+    "optString": "The {2} argument of {0}.{1} method must be a string or null.",
+    "manString": "The {2} argument of {0}.{1} method must be a non-empty string.",
+    "optNumber": "The {2} argument of {0}.{1} method must be a number value or null.",
+    "manNumber": "The {2} argument of {0}.{1} method must be a number value.",
+    "optInteger": "The {2} argument of {0}.{1} method must be an integer value or null.",
+    "manInteger": "The {2} argument of {0}.{1} method must be an integer value.",
+    "optBoolean": "The {2} argument of {0}.{1} method must be a Boolean value or null.",
+    "manBoolean": "The {2} argument of {0}.{1} method must be a Boolean value.",
+    "optObject": "The {2} argument of {0}.{1} method must be an object or null.",
+    "manObject": "The {2} argument of {0}.{1} method must be an object.",
+    "optFunction": "The {2} argument of {0}.{1} method must be a function or null.",
+    "manFunction": "The {2} argument of {0}.{1} method must be a function.",
+    "optType": "The {2} argument of {0}.{1} method must be a {3} object or null.",
+    "manType": "The {2} argument of {0}.{1} method must be a {3} object.",
+    "modelType": "The {2} argument of {0}.{1} method must be {3} type.",
+    "enumMember": "The {2} argument of {0}.{1} method must be a {3} item.",
+    "optArray": "The {2} argument of {0}.{1} method must be an array of {3} objects, or a single {3} object or null.",
+    "manArray": "The {2} argument of {0}.{1} method must be an array of {3} objects or a single {3} object.",
+    "optArrayPrim": "The {2} argument of {0}.{1} method must be an array of {3} values, or a single {3} value or null.",
+    "manArrayPrim": "The {2} argument of {0}.{1} method must be an array of {3} values or a single {3} value."
+  },
+  "PropertyError": {
+    "default": "The value passed to the property is invalid."
+  },
   "ConfigurationError": {
     "default": "An error occurred in the business objects' configuration.",
     "string": "The value of {0} property of business objects' configuration must be a non-empty string.",
